--- a/frontend/ethers/owner.html
+++ b/frontend/ethers/owner.html
@@ -11,7 +11,8 @@
     <button id="viewParticipantsBtn">View Participants</button>
     <div id="participantsList"></div>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/web3/4.2.1/web3.min.js" integrity="sha512-16bHUyyjvvIblMY4r09krdSjrJU4GgPPIk0VgiCJW/SPt2s2YYZ4ypsaTid+KiwvrQ6+aijt7Gu4LtQT4msbzQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdn.ethers.io/lib/ethers-5.2.umd.min.js"></script>
+    <script src="contract.js"></script>
     <script src="owner.js"></script>
 </body>
 </html>
