--- a/frontend/ethers/participant.html
+++ b/frontend/ethers/participant.html
@@ -13,6 +13,7 @@
 
     <!-- Include Ethers.js instead of Web3.js -->
     <script src="https://cdn.ethers.io/lib/ethers-5.0.umd.min.js"></script>
+    <script src="contract.js"></script>
     <script src="participant.js"></script>
 </body>
 </html>
