--- a/frontend/web3/owner.html
+++ b/frontend/web3/owner.html
@@ -12,6 +12,7 @@
     <div id="participantsList"></div>
     <button id="enterLottery">Enter</button>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/web3/4.2.1/web3.min.js" integrity="sha512-16bHUyyjvvIblMY4r09krdSjrJU4GgPPIk0VgiCJW/SPt2s2YYZ4ypsaTid+KiwvrQ6+aijt7Gu4LtQT4msbzQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="contract.js"></script>
     <script src="owner.js"></script>
 </body>
 </html>
