--- a/frontend/web3/participant.html
+++ b/frontend/web3/participant.html
@@ -12,7 +12,8 @@
     <div id="participantsList"></div>
 
     <!-- Include Ethers.js instead of Web3.js -->
-    <script src="https://cdn.ethers.io/lib/ethers-5.0.umd.min.js"></script>
-    <script src="participant2.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/web3@latest/dist/web3.min.js"></script>
+    <script src="contract.js"></script>
+    <script src="participant.js"></script>
 </body>
 </html>
